# Hand-gesture-controlled

./: .gitignore  INSTALL.md  README.md  REFACTORING_SUMMARY.md  config.json  example_media_control.py  example_mouse_control.py  example_pdf_control.py  gesture_recognizer.py  hand_detector.py  main.py  media_controller.py  mouse_controller.py  pdf_controller.py  pyproject.toml  requirements.txt  setup.py  test_installation.py
.dvc/: config
config/: config.json
data/: .gitignore  hagrid-sample-30k-384p.dvc
docs/evaluation_result/recognizer_evaluator/: evaluation_report.txt
src/: __init__.py  main.py
src/controllers/: media_controller.py  mouse_controller.py  pdf_controller.py
src/detectors/: hand_detector.py
src/docs/evaluation_docs/: IMPLEMENTATION_SUMMARY.md  METRICS_USAGE.md  PERFORMANCE_EVALUATION_GUIDE.md  README.md
src/evaluation/: debug_vertices.py  find_correct_mapping.py  freihand_evaluator.py  recognizer_evaluator.py
src/recognizers/: __init__.py  gesture_recognizer.py
src/recognizers/data_utils/: __init__.py  loaders.py
src/recognizers/evaluation/: METRICS_USAGE.md  eva_recog_metrics.py  eva_recog_performance.py  quick_start_evaluation.py
src/recognizers/models/: gesture_recognizer.py
src/recognizers/utils/: __init__.py  metrics.py  performance_metric.py
src/utils/: avif_utils.py
tests/evaluation/: test_evaluation_performance_installation.py
tests/fixtures/: hand_detector_fixtures.py
tests/unit/hand_detector/: test_hand_detector_basic.py  test_hand_detector_init.py  test_hand_detector_simple.py
